--- a/apps/cfworkers/package.json
+++ b/apps/cfworkers/package.json
@@ -1,17 +1,18 @@
 {
-	"name": "cloudflare",
+	"name": "cfworkers",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
+		"test": "vitest",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
+		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"typescript": "^5.5.2",
-		"wrangler": "^4.30.0",
-		"store": "*",
-		"redis-streams": "*"
+		"vitest": "~3.2.0",
+		"wrangler": "^4.31.0"
 	}
 }
