--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -8,5 +8,9 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "redis": "^5.8.2"
   }
 }
