--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "redis-streams": "^1.1.0"
   }
 }
